--- a/SeguinDynasty/templates/index.html
+++ b/SeguinDynasty/templates/index.html
@@ -71,7 +71,7 @@
 <body>
   <div class="container">
     <h1>Search for a Company</h1>
-    <form action="/graph" method="POST">
+    <form action="http://127.0.0.1:5000/graph" method="POST">
       <input type="text" name="company" placeholder="Enter company name" required>
       <button type="submit">Search</button>
     </form>
