--- a/SeguinDynasty/templates/index.html
+++ b/SeguinDynasty/templates/index.html
@@ -116,7 +116,7 @@
 
 <body>
   <div class="background-container"></div>
-  <h1>Welcome to the Company Search</h1>
+  <h1>Welcome to the <u>EquitoPredicto</u></h1>
   <div class="container">
     <h2>Search for a Company</h2>
     <form action="http://127.0.0.1:5000/graph" method="POST">
